--- a/gb/20/2/29/n11905160.md
+++ b/gb/20/2/29/n11905160.md
@@ -1,68 +1,75 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bbfwc2554/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bbfwc2554/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bbfwc2554/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bbfwc2554/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“视觉的史诗”神韵奥克兰一天两场全爆满</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/2002291025101528-600x400.jpg" />
 <h6>2020年2月29日，奥克兰奇里?特?卡娜娃剧院（Kiri Te Kanawa Theatre）一天两场神韵演出，连续爆满。（张君／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年02月29日讯】（大纪元新西兰奥克兰记者站报导）2020年2月29日，<a href="https://github.com/bbfwc2554/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>国际艺术团在奥克兰奇里?特?卡娜娃剧院（Kiri Te Kanawa Theatre）一天两场的演出，票房全爆满。</p>
-<p>从殊胜的天国圣景到柔美的人间仙境，从辽阔的蒙古草原到料峭的武当绝顶，两个多小时的文化旅程带给新西兰观众难以忘怀的体验。多位专业人士表示，从<a href="https://github.com/bbfwc2554/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>中受益匪浅，并对神韵所弘扬的价值观和传递的信息深感共鸣。</p>
+	<p>【大纪元2020年02月29日讯】（大纪元新西兰奥克兰记者站报导）2020年2月29日，<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团在<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%A5%A5%E5%85%8B%E5%85%B0%E5%A5%87%E9%87%8C%C2%B7%E7%89%B9%C2%B7%E5%8D%A1%E5%A8%9C%E5%A8%83%E5%89%A7%E9%99%A2.md#1">奥克兰奇里·特·卡娜娃剧院</a>（Kiri Te Kanawa Theatre）一天两场的演出，票房全爆满。</p>
+<p>从殊胜的天国圣景到柔美的人间仙境，从辽阔的蒙古草原到料峭的武当绝顶，两个多小时的文化旅程带给新西兰观众难以忘怀的体验。多位专业人士表示，从<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>中受益匪浅，并对神韵所弘扬的价值观和传递的信息深感共鸣。</p>
 <h2>神韵的“价值观令人称道”</h2>
-<figure id="attachment_11904911" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/02/2002290247462124.jpg"><img class="wp-image-11904911 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/02/2002290247462124-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年2月29日下午，医师Jackie Allen（右）和朋友两家一起观赏神韵29日的下午场。（任雪／大纪元）</figcaption></figure>
+<figure id="attachment_11904911" aria-describedby="caption-attachment-11904911" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/02/2002290247462124.jpg"><img class="wp-image-11904911 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/02/2002290247462124-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-11904911" class="wp-caption-text">2020年2月29日下午，医师Jackie Allen（右）和朋友两家一起观赏神韵29日的下午场。（任雪／大纪元）</figcaption></figure>
 <p>医生Jackie Allen和朋友各自带着女儿观赏了29日下午的演出。Allen称赞，神韵是一首“视觉的史诗”。</p>
 <p>“的确美不胜收，（神韵）是一首视觉的史诗。我赞佩每个舞蹈演员充沛的体力。他们落地时听不到一点声响，看起来轻松自如。”她说，“他们看起来是那么优雅，令人叹服。”</p>
-<p>Allen还感悟到神韵演出的<a href="https://github.com/bbfwc2554/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md">神性</a>内涵，她说：“艺术通常是表达精神层面的。我在神韵的舞蹈表演中感受到那种神性的内涵，很扣人心弦。演出还展现了包容的价值观，以及关心和善待别人，令人称道。”</p>
+<p>Allen还感悟到神韵演出的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md#1">神性</a>内涵，她说：“艺术通常是表达精神层面的。我在神韵的舞蹈表演中感受到那种神性的内涵，很扣人心弦。演出还展现了包容的价值观，以及关心和善待别人，令人称道。”</p>
 <h2>“神韵的信息应传递到全世界”</h2>
 <p>医师Farah Deobhakta和先生乘飞机从西海岸的New Plymouth专程来观赏神韵。Deobhakta对于神韵所传递的信息深有感触。</p>
-<p>“非常明显的是，演出蕴含着精神层面的内涵，比如宇宙中存在着高级生命，以及人们为何能坚定自己的信仰，这一点令我印象深刻，我想这也是神韵的意义所在。” 她说。</p>
-<p>“当今的人们在很大程度上遗失了传统，大家正在失去对高层生命的信仰，这也是为什么人们会肆意妄为并一味地伤害我们生活的星球。”Deobhakta说：“如果我们能遵循传统价值观来生活的话，我们会更加敬仰这个宇宙。所以，神韵传递的信息应该传递到全世界。”</p>
+<p>“非常明显的是，演出蕴含着精神层面的内涵，比如宇宙中存在着高级生命，以及人们为何能坚定自己的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>，这一点令我印象深刻，我想这也是神韵的意义所在。” 她说。</p>
+<p>“当今的人们在很大程度上遗失了传统，大家正在失去对高层生命的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>，这也是为什么人们会肆意妄为并一味地伤害我们生活的星球。”Deobhakta说，“如果我们能遵循传统价值观来生活的话，我们会更加敬仰这个宇宙。所以，神韵传递的信息应该传递到全世界。”</p>
 <h2>“神韵带给我对中国文化的全新理解”</h2>
-<figure id="attachment_11904767" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/02/2002282350332124.jpg"><img class="wp-image-11904767 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/02/2002282350332124-450x300.jpg" alt="" width="450" b="300" /></a><figcaption class="wp-caption-text">2020年2月29日，外科医生Josephine Todd观看了神韵在新西兰首都奥克兰的第三场演出，欣喜地说，“非常启迪人心”。（李鸣岐／大纪元）</figcaption></figure>
+<figure id="attachment_11904767" aria-describedby="caption-attachment-11904767" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/02/2002282350332124.jpg"><img class="wp-image-11904767 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/02/2002282350332124-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-11904767" class="wp-caption-text">2020年2月29日，外科医生Josephine Todd观看了神韵在新西兰首都奥克兰的第三场演出，欣喜地说，“非常启迪人心”。（李鸣岐／大纪元）</figcaption></figure>
 <p>外科医生Josephine Todd观赏神韵后则对中国的传统文化赞赏有加。“这场演出令人眼界大开，带给我对中国文化的全新理解，令我非常尊重中国的传统以及中国人的生活。”</p>
 <p>演出中提到的对信仰者的迫害问题，是Todd原来没有意识到的。“看到（在中国的）信仰者受到迫害时，我觉得非常不安。看到中国大陆在当今这个时代还有人经历这样的事情，真的令人很伤心。这些舞蹈演员甚至无法回到他们自己的国家演出。如果他们可以回去演出，将会带给中国人多么令人赞叹的体验啊！”</p>
 <p>令Todd感动的是，“我看到海外的中国人仍然如此热爱这种文化和传统，仍然在承传这种文化。我看到这些年轻的演员热爱这样的传统文化，并在延续这种艺术形式，而这一切又如此美好，让我非常感动并感到温暖。”</p>
 <h2>“神韵让我学到很多”</h2>
-<figure id="attachment_11905365" style="width: 450px" class="wp-caption aligncenter"><a href="https://i.epochtimes.com/assets/uploads/2020/02/2002290625302153.jpg"><img class="wp-image-11905365 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/02/2002290625302153-450x299.jpg" alt="" width="450" b="299" /></a><figcaption class="wp-caption-text">2020年2月29日，家庭医生Vanessa Muller（右）和好友一起从陶朗加赶来看神韵，Muller表示受益匪浅。（易凡／大纪元）</figcaption></figure>
+<figure id="attachment_11905365" aria-describedby="caption-attachment-11905365" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/02/2002290625302153.jpg"><img class="wp-image-11905365 size-medium" src="https://i.epochtimes.com/assets/uploads/2020/02/2002290625302153-450x299.jpg" alt="" width="450" b="299" /></a><figcaption id="caption-attachment-11905365" class="wp-caption-text">2020年2月29日，家庭医生Vanessa Muller（左）和好友一起从陶朗加赶来看神韵，Muller表示受益匪浅。（易凡／大纪元）</figcaption></figure>
 <p>家庭医生Vanessa Muller和好友一起从陶朗加赶来看神韵。</p>
 <p>Muller表示：“我记得中共当政后，艺术家要被迫跳充满斗争性的舞蹈。” “而如今神韵让我们看到了与中共宣传不同的中华传统文化。”</p>
-<p>观赏神韵演出Muller受益匪浅。“像体操、杂技，很多都是来自于中国古典舞，而这些我之前并不知道。神韵演出让我学到了很多。”而舞蹈演员的动作精准，身体轻盈，都给她留下了难忘的印象。</p>
-<p>责任编辑：李颖</p>
+<p>观赏神韵演出让Muller受益匪浅，她说：“像体操、杂技，很多都是来自于中国古典舞，而这些我之前并不知道。神韵演出让我学到了很多。”而舞蹈演员的动作精准，身体轻盈，都给她留下了难忘的印象。</p>
+<p>责任编辑：李颖#</p>
 	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/2/29/n11905160.htm">“视觉的史诗”神韵奥克兰一天两场全爆满</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/18/8/23/n10660661.htm">苏澳海事办小家电维修营 废品再生做公益</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/5/29/n7941829.htm">全国最长寿环保市集 欢庆五周年生日</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/4/19/n7571260.htm">巧手换新装 中市推维修旧物自己来</a></li>
-> <li><a href="https://www.epochtimes.com/gb/14/5/29/n4166727.htm">台首张家电坏掉  维修费有得保</a></li>
-> <li><a href="https://www.epochtimes.com/gb/13/2/28/n3811404.htm">二手家电变宝贝 职训爱心感动扶助家庭</a></li>
-> <li><a href="https://www.epochtimes.com/gb/12/5/31/n3601901.htm">抗涨新主张  电风扇免费健检</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884463.htm">北京多家医院爆发新冠肺炎群聚感染</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879930.htm">专家：中共已是烂摊子 全球将迎来新的中国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884649.htm">中共多家监狱爆发大规模新冠肺炎疫情</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884866.htm">武汉民间志愿者：新冠肺炎重症死亡率达50%</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881829.htm">【拍案惊奇】新病毒无特效药 病患求生要闯2关</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883542.htm">【热点互动】围绕零号病人 官方为何讳莫如深</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846854.htm">【我来说西游】黑风山怪窃袈裟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/2/27/n11900885.md#1">“神韵在改变世界”酒店总经理夫妇盛赞</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/2/28/n11902850.md#1">BMW集团常务董事：神韵有个伟大的灵魂</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/2/28/n11902898.md#1">演出唤回良善 总经理夫妇赞神韵勇气可嘉</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/2/28/n11903138.md#1">神韵色彩绚丽 建筑经理夫妇感受喜悦与幸福</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/2/28/n11903154.md#1">神韵演绎中华传统文化 总经理赞引人入胜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/2/28/n11903372.md#1">神韵奥克兰再满场 商业精英齐赞赏</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/bbfwc2554/djy/blob/master/gb/20/2/29/n11905160.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bbfwc2554/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bbfwc2554/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bbfwc2554/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/10/n2962346.md#1" target="_blank">鲜为人知的马克思之一：专制的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/29/n11905160.htm">“视觉的史诗”神韵奥克兰一天两场全爆满</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/20/2/29/n11905160.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
